cmake_minimum_required(VERSION 2.8)

message(STATUS "")
message(STATUS "")
message(STATUS "")
message(STATUS "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%")
message(STATUS "%%%%%%%% CONFIGURATION VERSION ${VERSION} FIND_INTERP ${FIND_INTERP}")

if(${FIND_INTERP} EQUAL NO)
  unset(FIND_INTERP)
endif(${FIND_INTERP} EQUAL NO)

message(STATUS "PYTHON_LIBRARY=${PYTHON_LIBRARY}")
message(STATUS "PYTHON_INCLUDE_DIR=${PYTHON_INCLUDE_DIR}")
if(FIND_INTERP)
  message(STATUS "Looking for PythonInterp before PythonLibs")
else(FIND_INTERP)
  message(STATUS "Not looking for PythonInterp")
endif(FIND_INTERP)
if(VERSION)
  message(STATUS "Looking for version ${VERSION}")
else(VERSION)
  message(STATUS "Looking for latest version")
endif(VERSION)

message(STATUS "")
message(STATUS "%%%%%%%% FIND")

if(FIND_INTERP)
  if(VERSION)
    message(STATUS "%%% Finding PythonInterp ${VERSION}")
    find_package ( PythonInterp ${VERSION} )
    message(STATUS "%%% Finding PythonLibs ${PYTHON_VERSION_STRING}")
    find_package ( PythonLibs ${PYTHON_VERSION_STRING} EXACT)
  else(VERSION)
    message(STATUS "%%% Finding PythonInterp")
    find_package ( PythonInterp )
    message(STATUS "%%% Finding PythonLibs")
    find_package ( PythonLibs )
  endif(VERSION)
else(FIND_INTERP)
  message(STATUS "%%% Not Finding PythonInterp")
  if(VERSION)
    message(STATUS "%%% Finding PythonLibs ${VERSION}")
    find_package ( PythonLibs ${VERSION} EXACT)
  else(VERSION)
    message(STATUS "%%% Finding PythonLibs")
    find_package ( PythonLibs )
  endif(VERSION)
endif(FIND_INTERP)

message(STATUS "")
message(STATUS "%%%%%%%% RESULTS")

message(STATUS "%%% PythonInterp result")
message(STATUS "PYTHON_VERSION_STRING = ${PYTHON_VERSION_STRING}")
message(STATUS "PYTHON_EXECUTABLE = ${PYTHON_EXECUTABLE}")
message(STATUS "%%% PythonLibs result")
message(STATUS "PYTHONLIBS_VERSION_STRING = ${PYTHONLIBS_VERSION_STRING}")
message(STATUS "PYTHON_LIBRARIES = ${PYTHON_LIBRARIES}")
message(STATUS "PYTHON_LIBRARY = ${PYTHON_LIBRARY}")
message(STATUS "PYTHON_DEBUG_LIBRARIES = ${PYTHON_DEBUG_LIBRARIES}")
message(STATUS "PYTHON_INCLUDE_DIR = ${PYTHON_INCLUDE_DIR}")
message(STATUS "PYTHON_INCLUDE_DIRS = ${PYTHON_INCLUDE_DIRS}")
message(STATUS "PYTHON_INCLUDE_PATH = ${PYTHON_INCLUDE_PATH}")
message(STATUS "PYTHON_FRAMEWORK_INCLUDES = ${PYTHON_FRAMEWORK_INCLUDES}")
message(STATUS "Python_FRAMEWORKS = ${Python_FRAMEWORKS}")

message(STATUS "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%")
message(STATUS "")
message(STATUS "")
message(STATUS "")
